feat: 🔒 add SECURITY.md, PRD, enable Dependabot, update README

--- a/skills/copilot-cli-quickstart/catalog.yml
+++ b/skills/copilot-cli-quickstart/catalog.yml
@@ -14,6 +14,7 @@ tags: [learning, tutorial, quickstart, beginner, copilot-cli, education]
 platforms: [copilot-cli]
 input_format: free-text
 links:
+  prd: agents/copilot-cli-quickstart.md
   agent_file: agents/copilot-cli-quickstart.agent.md
   skill_file: skills/copilot-cli-quickstart/SKILL.md
 license: MIT
