fix: repo hygiene — correct URLs, add CODEOWNERS/dependabot, update docs
- README: fix all copilot-cli-quickstart-campair → copilot-cli-quickstart
- SECURITY.md: add 1.1.x to supported versions table
- catalog.yml: correct lesson count (8 Dev, 7 Non-Dev)
- CONTRIBUTING.md: add SKILL.md sync reminder
- Add .github/CODEOWNERS (@DUBSOpenHub owns all)
- Add .github/dependabot.yml (GitHub Actions ecosystem)

--- a/skills/copilot-cli-quickstart/catalog.yml
+++ b/skills/copilot-cli-quickstart/catalog.yml
@@ -4,7 +4,7 @@ name: Copilot CLI Quick Start
 description: >
   Interactive tutor skill that teaches absolute beginners how to use GitHub
   Copilot CLI. Offers guided lessons across Developer and Non-Developer tracks
-  (up to 8 per track), plus on-demand Q&A for any Copilot CLI question.
+  (8 Developer, 7 Non-Developer), plus on-demand Q&A for any Copilot CLI question.
   Say "start tutorial" or ask anything!
 emoji: "🚀"
 codename: The Friendly Terminal Tutor
